force-app/main/default/objects/sugati__Suggestion_Rule__c/sugati__Suggestion_Rule__c.object-meta.xml
<CustomObject>
    <label>Suggestion Rule</label>
    <nameField>
        <displayFormat>SUGR-{000000}</displayFormat>
        <label>Suggestion Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggestion Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>