force-app/main/default/objects/sugati__Suggestion_Rule__c/fields/sugati__S_SR_Client_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SR_Client_Country__c</fullName>
    <description>Country of residence filter</description>
    <label>Client Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>