force-app/main/default/objects/sugati__Suggestion_Rule__c/fields/sugati__S_SR_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SR_Confidence_Score__c</fullName>
    <description>Indicates how strong this pattern is based on historical data</description>
    <label>Confidence Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>