force-app/main/default/objects/sugati__Suggestion_Rule__c/fields/sugati__S_SR_Consultant__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SR_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional — Used for personal patterns</description>
    <label>Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Suggestion_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>