force-app/main/default/objects/sugati__Suggestion_Rule__c/fields/sugati__S_SR_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SR_Country_Name__c</fullName>
    <formula>IF(
    NOT(ISBLANK(sugati__S_SR_Trigger_Supplier__r.sugati__S_Where_to_go__r.sugati__W_Country__r.Name)),
    sugati__S_SR_Trigger_Supplier__r.sugati__S_Where_to_go__r.sugati__W_Country__r.Name,
    IF(
        NOT(ISBLANK(sugati__S_SR_Trigger_Activity__r.sugati__WH_Where_to_go__r.sugati__W_Country__r.Name)),
        sugati__S_SR_Trigger_Activity__r.sugati__WH_Where_to_go__r.sugati__W_Country__r.Name,
        sugati__S_SR_Trigger_Airport__r.sugati__S_AIR_Where_to_go__r.sugati__W_Country__r.Name
    )
)</formula>
    <label>Country Name</label>
    <type>Text</type>
</CustomField>