force-app/main/default/objects/sugati__Suggestion_Rule__c/fields/sugati__S_SR_Day_Offset__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SR_Day_Offset__c</fullName>
    <description>Day relative to the trigger (e.g., 0 = same day, +1 = next day)</description>
    <label>Day Offset</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>