force-app/main/default/objects/sugati__Suggestion_Rule__c/fields/sugati__S_SR_Dynamic__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SR_Dynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Yes, if it is coming from Batch. Otherwise it will be done created manually.</description>
    <label>Dynamic</label>
    <type>Checkbox</type>
</CustomField>