force-app/main/default/objects/sugati__Suggestion_Rule__c/fields/sugati__S_SR_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SR_Notes__c</fullName>
    <description>Optional explanation for why this rule exists</description>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>