force-app/main/default/objects/sugati__Suggestion_Rule__c/fields/sugati__S_SR_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SR_Preferred_Language__c</fullName>
    <description>Optional — Filter by preferred language</description>
    <label>Preferred Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>