force-app/main/default/objects/sugati__Suggestion_Rule__c/fields/sugati__S_SR_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SR_Source_Type__c</fullName>
    <description>Defines scope of rule</description>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>