force-app/main/default/objects/sugati__Suggestion_Rule__c/fields/sugati__S_SR_Travelling_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SR_Travelling_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travelling Country</label>
    <referenceTo>sugati__Country__c</referenceTo>
    <relationshipLabel>Suggestion Rules</relationshipLabel>
    <relationshipName>Suggestion_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>