force-app/main/default/objects/sugati__Suggestion_Rule__c/fields/sugati__S_SR_Trigger_Activity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SR_Trigger_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional — Activity-based trigger</description>
    <label>Trigger Activity</label>
    <referenceTo>sugati__Activity__c</referenceTo>
    <relationshipLabel>Suggestion Rules</relationshipLabel>
    <relationshipName>Suggestion_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>