force-app/main/default/objects/sugati__Suggestion_Rule__c/fields/sugati__S_SR_Trigger_Airport__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SR_Trigger_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional — Airport-based trigger</description>
    <label>Trigger Airport</label>
    <referenceTo>sugati__Airport__c</referenceTo>
    <relationshipLabel>Suggestion Rules</relationshipLabel>
    <relationshipName>Suggestion_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>