force-app/main/default/objects/sugati__Suggestion_Rule__c/fields/sugati__S_SR_Trigger_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SR_Trigger_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional — Supplier-based trigger</description>
    <label>Trigger Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Suggestion Rules</relationshipLabel>
    <relationshipName>Suggestion_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>