force-app/main/default/objects/sugati__Suggestion_Rule__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__S_SR_Travelling_Country__c</columns>
    <columns>sugati__S_SR_Trigger_Activity__c</columns>
    <columns>sugati__S_SR_Trigger_Airport__c</columns>
    <columns>sugati__S_SR_Trigger_Supplier__c</columns>
    <columns>sugati__S_SR_Confidence_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>